--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "dependencies": {
 	    "express": "3.x",
+        "nconf": "*",
         "tail": "*",
         "socket.io": "*"
     }
