--- a/config.json.sample
+++ b/config.json.sample
@@ -1,7 +1,8 @@
 {
     "app" : {
         "host" : "0.0.0.0",
-        "port" : 8080
+        "port1" : 8080,
+        "port2" : 8081
     },
     "path" : {
         "logfile" : "/log/babble.log",
