--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "tail": "*",
         "socket.io": "*",
         "consolidate": "*",
-        "swig" : "*"
+        "swig" : "*",
+        "crypto" : "*"
     }
 }
